[gd_scene load_steps=46 format=3 uid="uid://c4lvsnq5ef3lw"]

[ext_resource type="Texture2D" uid="uid://bb6nak0htrxdp" path="res://Assets/Sprites/Codex/Codex_Book.png" id="1_t6w4t"]
[ext_resource type="Script" path="res://Scripts/ResearchTasks/codex.gd" id="2_shked"]
[ext_resource type="FontFile" uid="uid://ty1a6jpkrkqh" path="res://Assets/Fonts/alagard.ttf" id="3_84ihl"]
[ext_resource type="FontFile" uid="uid://dbujpgfdoqmp3" path="res://Assets/Fonts/yoster.ttf" id="3_pdsf2"]
[ext_resource type="FontFile" uid="uid://bau31tfee7vtd" path="res://Assets/Fonts/8bitlimr.ttf" id="3_vewcg"]
[ext_resource type="Texture2D" uid="uid://buw8rrcrdjnk7" path="res://Assets/Sprites/Monsters/CommonShrooman_Happy.png" id="4_lbd4c"]
[ext_resource type="Texture2D" uid="uid://d32sayb14nq6c" path="res://Assets/Sprites/UI/btn_CodexArrow_L_0.png" id="6_ak0cu"]
[ext_resource type="Texture2D" uid="uid://cg2fyq2cmaigd" path="res://Assets/Sprites/InventoryIcons/oldhealth.png" id="6_qs2vo"]
[ext_resource type="Texture2D" uid="uid://cmgievdtnu6x6" path="res://Assets/Sprites/UI/btn_CodexArrow_L_1.png" id="7_u17wa"]
[ext_resource type="Texture2D" uid="uid://cr6hhu4sp011c" path="res://Assets/Sprites/Codex/Codex_BM_11.png" id="7_vwexi"]
[ext_resource type="Texture2D" uid="uid://bfg3814tc5bxq" path="res://Assets/Sprites/UI/btn_CodexArrow_R_0.png" id="8_jj0f5"]
[ext_resource type="Texture2D" uid="uid://emuulsybwdvg" path="res://Assets/Sprites/Codex/Codex_BM_10.png" id="8_vew1b"]
[ext_resource type="Texture2D" uid="uid://cq7qxgayipi5" path="res://Assets/Sprites/Codex/Codex_BM_21.png" id="9_1s04t"]
[ext_resource type="ButtonGroup" uid="uid://luv0i5t7cqlp" path="res://Styles/codex_tabs_group.tres" id="9_jvqrd"]
[ext_resource type="Texture2D" uid="uid://cdvesbwk4xl7m" path="res://Assets/Sprites/UI/btn_CodexArrow_R_1.png" id="9_uetau"]
[ext_resource type="Texture2D" uid="uid://b37hph8r0nuru" path="res://Assets/Sprites/Codex/Codex_BM_31.png" id="10_trstf"]
[ext_resource type="Texture2D" uid="uid://beaacgr6b170u" path="res://Assets/Sprites/Codex/Codex_BM_20.png" id="10_w1o8p"]
[ext_resource type="Texture2D" uid="uid://gvih83td67sc" path="res://Assets/Sprites/UI/btn_CodexX_0.png" id="12_fnsay"]
[ext_resource type="Texture2D" uid="uid://b2kj5mad38ymh" path="res://Assets/Sprites/Codex/Codex_BM_30.png" id="12_vkyjp"]
[ext_resource type="Texture2D" uid="uid://c2aptpss7jp0g" path="res://Assets/Sprites/UI/btn_CodexX_1.png" id="13_8jipc"]
[ext_resource type="Texture2D" uid="uid://dkbc34yrei8rn" path="res://Assets/Sprites/UI/Notif_TL_1.png" id="14_itwjw"]
[ext_resource type="Texture2D" uid="uid://mm3y3bvej5qe" path="res://Assets/Sprites/UI/btn_CodexX_2.png" id="14_mdbux"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sonk2"]
texture = ExtResource("6_ak0cu")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lfkyp"]
texture = ExtResource("7_u17wa")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1qln1"]
texture = ExtResource("6_ak0cu")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3mw0j"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7osou"]
texture = ExtResource("8_jj0f5")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ijc3i"]
texture = ExtResource("9_uetau")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_g6ji0"]
texture = ExtResource("8_jj0f5")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gcu1o"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_m8fgp"]
texture = ExtResource("12_fnsay")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_c2wo0"]
texture = ExtResource("13_8jipc")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_etigx"]
texture = ExtResource("14_mdbux")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vws6f"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nrioo"]
texture = ExtResource("7_vwexi")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wiknn"]
texture = ExtResource("7_vwexi")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_aiy26"]
texture = ExtResource("8_vew1b")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3uqco"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_arqaf"]
texture = ExtResource("9_1s04t")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_opsi6"]
texture = ExtResource("9_1s04t")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ph5he"]
texture = ExtResource("10_w1o8p")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pmj6t"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_r0v4b"]
texture = ExtResource("10_trstf")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mihpj"]
texture = ExtResource("10_trstf")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_o63e4"]
texture = ExtResource("12_vkyjp")

[node name="NinePatchRect" type="NinePatchRect"]
z_index = 3
anchors_preset = -1
anchor_left = 0.266
anchor_top = 0.005
anchor_right = 0.961
anchor_bottom = 0.931
offset_left = 0.567993
offset_top = -0.24
offset_right = -0.0721436
offset_bottom = -0.288025
texture = ExtResource("1_t6w4t")
script = ExtResource("2_shked")

[node name="VBoxContainerLHS" type="VBoxContainer" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.069
anchor_top = 0.085
anchor_right = 0.444
anchor_bottom = 0.917
offset_left = -0.199997
offset_right = -0.199951
offset_bottom = -5.20001

[node name="Name" type="RichTextLabel" parent="VBoxContainerLHS"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_84ihl")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center]Monster Name[/center]"
fit_content = true

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainerLHS"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.67

[node name="EntrySprite2D" type="TextureRect" parent="VBoxContainerLHS/CenterContainer"]
clip_contents = true
custom_minimum_size = Vector2(220, 245)
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("4_lbd4c")
expand_mode = 5

[node name="DetailsVBoxContainer" type="VBoxContainer" parent="VBoxContainerLHS"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3

[node name="Diet" type="RichTextLabel" parent="VBoxContainerLHS/DetailsVBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_84ihl")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "Diet: Anything"
fit_content = true

[node name="Habitat" type="RichTextLabel" parent="VBoxContainerLHS/DetailsVBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
size_flags_stretch_ratio = 0.33
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_84ihl")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "Habitat: Forests, Caves"
fit_content = true

[node name="Facts" type="RichTextLabel" parent="VBoxContainerLHS/DetailsVBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_84ihl")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "Shroomen seem to be able to communicate with others of their species without the need for vocalisations or body language."
fit_content = true

[node name="VBoxContainerRHS" type="VBoxContainer" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.531
anchor_top = 0.093
anchor_right = 0.969
anchor_bottom = 0.917
offset_left = 0.200043
offset_top = 0.199997
offset_right = -0.19989
offset_bottom = -0.200012

[node name="NotesTitle" type="RichTextLabel" parent="VBoxContainerRHS"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_84ihl")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center]Research Tasks[/center]"
fit_content = true

[node name="ResearchQuestion0" type="RichTextLabel" parent="VBoxContainerRHS"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_84ihl")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "How do Shroomen communicate?"
fit_content = true

[node name="CenterContainer0" type="CenterContainer" parent="VBoxContainerRHS"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 0

[node name="ResearchAnswer0" type="RichTextLabel" parent="VBoxContainerRHS/CenterContainer0"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_pdsf2")
bbcode_enabled = true
text = "It appears they communicate through a network of fungal threads that spread underground. I wonder how far they can go?"
fit_content = true

[node name="Button" type="Button" parent="VBoxContainerRHS"]
visible = false
layout_mode = 2

[node name="ResearchQuestion1" type="RichTextLabel" parent="VBoxContainerRHS"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_pdsf2")
bbcode_enabled = true
fit_content = true

[node name="CenterContainer1" type="CenterContainer" parent="VBoxContainerRHS"]
clip_contents = true
layout_mode = 2

[node name="ResearchAnswer1" type="RichTextLabel" parent="VBoxContainerRHS/CenterContainer1"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_pdsf2")
bbcode_enabled = true
text = "???"
fit_content = true

[node name="ResearchQuestion2" type="RichTextLabel" parent="VBoxContainerRHS"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_pdsf2")
bbcode_enabled = true
fit_content = true

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainerRHS"]
clip_contents = true
layout_mode = 2

[node name="ResearchAnswer2" type="RichTextLabel" parent="VBoxContainerRHS/CenterContainer2"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_pdsf2")
bbcode_enabled = true
text = "???
"
fit_content = true

[node name="PrevPageButton" type="Button" parent="."]
layout_mode = 0
offset_left = 37.0
offset_top = 530.0
offset_right = 67.0
offset_bottom = 560.0
theme_override_styles/normal = SubResource("StyleBoxTexture_sonk2")
theme_override_styles/hover = SubResource("StyleBoxTexture_lfkyp")
theme_override_styles/pressed = SubResource("StyleBoxTexture_1qln1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_3mw0j")

[node name="NextPageButton" type="Button" parent="."]
layout_mode = 0
offset_left = 741.0
offset_top = 530.0
offset_right = 771.0
offset_bottom = 560.0
theme_override_styles/normal = SubResource("StyleBoxTexture_7osou")
theme_override_styles/hover = SubResource("StyleBoxTexture_ijc3i")
theme_override_styles/pressed = SubResource("StyleBoxTexture_g6ji0")
theme_override_styles/focus = SubResource("StyleBoxEmpty_gcu1o")

[node name="VBoxContainerLHSPotion" type="VBoxContainer" parent="."]
visible = false
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.069
anchor_top = 0.125
anchor_right = 0.444
anchor_bottom = 0.917
offset_left = -0.200005
offset_right = -0.200043
offset_bottom = -5.20001

[node name="Name" type="RichTextLabel" parent="VBoxContainerLHSPotion"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_vewcg")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center]Monster Name[/center]"
fit_content = true

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainerLHSPotion"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.67

[node name="EntrySprite2D" type="TextureRect" parent="VBoxContainerLHSPotion/CenterContainer"]
clip_contents = true
custom_minimum_size = Vector2(220, 245)
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("6_qs2vo")
expand_mode = 5

[node name="DetailsVBoxContainer" type="VBoxContainer" parent="VBoxContainerLHSPotion"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3

[node name="Location" type="RichTextLabel" parent="VBoxContainerLHSPotion/DetailsVBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_vewcg")
bbcode_enabled = true
text = "Location: Alchemy Lab"
fit_content = true

[node name="Ingredients" type="RichTextLabel" parent="VBoxContainerLHSPotion/DetailsVBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
size_flags_stretch_ratio = 0.33
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_vewcg")
bbcode_enabled = true
text = "Ingredients: Dawn Grass + Blood Cap"
fit_content = true

[node name="Use" type="RichTextLabel" parent="VBoxContainerLHSPotion/DetailsVBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_vewcg")
bbcode_enabled = true
text = "Equip to explorers in before sending them on an expedition for +1 Material Carry Capacity."
fit_content = true

[node name="CloseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.92
anchor_top = 0.053
anchor_right = 0.965
anchor_bottom = 0.107
offset_left = 0.00012207
offset_top = 0.199999
offset_bottom = -0.200005
theme_override_styles/normal = SubResource("StyleBoxTexture_m8fgp")
theme_override_styles/hover = SubResource("StyleBoxTexture_c2wo0")
theme_override_styles/pressed = SubResource("StyleBoxTexture_etigx")
theme_override_styles/focus = SubResource("StyleBoxEmpty_vws6f")

[node name="PotionsTab" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.12
anchor_top = 0.05
anchor_right = 0.029
anchor_bottom = 0.183
offset_top = 80.0
offset_right = -39.1999
offset_bottom = 119.2
rotation = -1.5708
theme_override_styles/normal = SubResource("StyleBoxTexture_nrioo")
theme_override_styles/hover = SubResource("StyleBoxTexture_wiknn")
theme_override_styles/pressed = SubResource("StyleBoxTexture_aiy26")
theme_override_styles/focus = SubResource("StyleBoxEmpty_3uqco")
toggle_mode = true
keep_pressed_outside = true
button_group = ExtResource("9_jvqrd")

[node name="MonstersTab" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.115
anchor_top = 0.197
anchor_right = 0.036
anchor_bottom = 0.322
offset_left = -4.57764e-05
offset_top = 74.8
offset_right = -45.8
offset_bottom = 120.8
rotation = -1.5708
tooltip_text = "Button"
theme_override_styles/normal = SubResource("StyleBoxTexture_arqaf")
theme_override_styles/hover = SubResource("StyleBoxTexture_opsi6")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ph5he")
theme_override_styles/focus = SubResource("StyleBoxEmpty_pmj6t")
toggle_mode = true
keep_pressed_outside = true
button_group = ExtResource("9_jvqrd")

[node name="PlantsTab" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = -0.123
anchor_top = 0.715
anchor_right = 0.029
anchor_bottom = 0.845
offset_left = 0.399986
offset_top = 78.0
offset_right = -43.2
offset_bottom = 121.0
rotation = -1.5708
theme_override_styles/normal = SubResource("StyleBoxTexture_r0v4b")
theme_override_styles/hover = SubResource("StyleBoxTexture_mihpj")
theme_override_styles/pressed = SubResource("StyleBoxTexture_o63e4")
theme_override_styles/focus = SubResource("StyleBoxEmpty_pmj6t")
action_mode = 0
button_group = ExtResource("9_jvqrd")

[node name="PotionsAlert" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.008
anchor_top = 0.13
anchor_right = 0.135
anchor_bottom = 0.3
offset_left = -0.399999
offset_right = 1.52588e-05
texture = ExtResource("14_itwjw")

[connection signal="pressed" from="VBoxContainerRHS/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="PrevPageButton" to="." method="_on_prev_page_button_pressed"]
[connection signal="pressed" from="NextPageButton" to="." method="_on_next_page_button_pressed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
